# py_candlestick

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
models/: candle.py  chart.py  indicator.py
py_candlestick/: chart.py  defaults.py  symbol.py  time_frame.py
py_candlestick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py  back_testing.py  candle.py  chart.py  defaults.py  indicator.py  indicator_calculators.py  pattern.py  protocols.py  series.py  symbol.py  time_frame.py  volume.py
tests/: candle_tests.py  chart_tests.py  fixtures.py
tests/external_data/: exam_df.csv
