[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_candlestick"
version = "0.1.1"
authors = [
  { name="Soheil Hesari Khosroshahi", email="khosroshahisoheil@gmail.com" }
]
description = "A pythonic package for working with market data"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

dependencies = [
    "MetaTrader5",
    "pandas >=2.0",
    "numpy >=1.24",
    "more-itertools >=10.0"
]

[project.urls]
Homepage = "https://github.com/s0hei1/py_candlestick"