[metadata]
name = py_candlestick
version = 0.1.1
author = Soheil Hesari Khosroshahi
author_email = khosroshahisoheil1999@gmail.com
description = Data class based implementation of Financial Markets data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s0hei1/py_candlestick
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    MetaTrader5
    more-itertools
    numpy
    pandas